<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".main.home.HomeFragment">


    <ImageView
        android:id="@+id/cover"
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="-25dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/banner" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/cover"
        android:layout_marginBottom="-10dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="0dp">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/menu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:weightSum="3">

                        <LinearLayout
                            android:id="@+id/monitoring"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:orientation="vertical"
                            android:padding="8dp"
                            tools:ignore="UseCompoundDrawables">

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:contentDescription="@string/app_name"
                                android:src="@drawable/ic_monitoring"
                                app:tint="@color/blue_500" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="8dp"
                                android:gravity="center"
                                android:text="@string/monitoring" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:orientation="vertical"
                            android:padding="8dp"
                            tools:ignore="UseCompoundDrawables">

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:contentDescription="@string/app_name"
                                android:src="@drawable/ic_checklist"
                                app:tint="@color/blue_500" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="8dp"
                                android:gravity="center_horizontal"
                                android:text="Laporan Keuangan" />
                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/pkp"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:orientation="vertical"
                            android:padding="8dp"
                            tools:ignore="UseCompoundDrawables">

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:contentDescription="@string/app_name"
                                android:src="@drawable/ic_monitoring"
                                app:tint="@color/blue_500" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="8dp"
                                android:gravity="center_horizontal"
                                android:text="@string/pkp" />
                        </LinearLayout>

                    </LinearLayout>

                </LinearLayout>


                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:padding="8dp">

                    <ImageView
                        android:id="@+id/bg"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:scaleType="fitXY"
                        android:src="@drawable/bg_title"
                        app:tint="@color/blue_500" />

                    <View
                        android:background="@color/orange_700"
                        android:layout_width="match_parent"
                        android:layout_marginEnd="30dp"
                        android:layout_marginStart="5dp"
                        android:layout_alignBottom="@id/bg"
                        android:layout_height="4dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="30dp"
                        android:text="@string/pengumuman"
                        android:textColor="@color/white"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/selengkapnya"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:background="@drawable/circle"
                        android:paddingHorizontal="8dp"
                        android:paddingVertical="4dp"
                        android:text="@string/selengkapnya"
                        android:textColor="@color/white"
                        android:textSize="11sp"
                        android:textStyle="bold" />
                </RelativeLayout>


            </LinearLayout>

            <com.facebook.shimmer.ShimmerFrameLayout
                android:id="@+id/shimmerPengumuman"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/menu"
                android:background="@color/white"
                android:backgroundTint="@color/white">

                <include layout="@layout/shimmer_pengumuman" />
            </com.facebook.shimmer.ShimmerFrameLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvPengumuman"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/menu"
                android:layout_marginTop="8dp"
                android:visibility="gone" />

        </RelativeLayout>


    </androidx.cardview.widget.CardView>


</RelativeLayout>